Using record class to syntax sugar