@@ -14,6 +14,18 @@ compileJava {
 	targetCompatibility = 15
 }
 
+tasks.withType(JavaCompile) {
+	options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test) {
+	jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+	jvmArgs += '--enable-preview'
+}
+
 repositories {
 	mavenCentral()
 }
